# VM-Course

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.MD
asm/: arithmetic.asm  foo_bar_print_1.asm  foo_bar_print_2.asm  main.asm  main.prog  square_eq.asm
asm/tests/: arithmetic.asm  arithmetic.prog  array.asm  array.prog  bench.asm  branching.asm  branching.prog  call.asm  call.prog  foo_bar_print.asm  gc.asm  intrinsic.asm  intrinsic.prog  objarray.asm  object.asm  recursion.asm  square_eq.asm  square_eq.prog  strfunc.asm  strfunc.prog  string.asm  string.prog
cmake/: codeGeneration.cmake  generation.cmake
codegen/: CMakeLists.txt  cogfiles.txt
codegen/isa/: isa.yml
codegen/templates/: Decoder.cpp.temp  instruction_enum.h.temp
frontend/: CMakeLists.txt  squareEq.lang  test.lang
frontend/AST/: AST.cpp  AST.h
frontend/Lexer/: VMCustomLexer.cpp  VMCustomLexer.h  VMLangLexer.cpp  VMLangLexer.lex
frontend/Main/: VMFrontend.cpp
frontend/Parser/: VMCustomParser.cpp  VMCustomParser.h  VMLangParser.cpp  VMLangParser.hpp  VMLangParser.y
frontend/Tests/: custom.lang  simple.lang  squareEq.lang  string.lang  test_float.lang
include/: Allocator.h  AsmParser.h  Common.h  Decoder.h  GarbageCollector.h  Instructions.h  Interpreter.h  Parser.h  VirtualMachine.h
isa/: isa.yml
src/: Allocator.cpp  Asm2Bin.cpp  AsmParser.cpp  CMakeLists.txt  Decoder.cpp  GarbageCollector.cpp  Interpreter.cpp  Parser.cpp  VirtualMachine.cpp  code_gen.py  main.cpp
src/templates/: Decoder.cpp.temp  Executors.h.temp  Instr_enum.h.temp  Instruction_enum.h.temp  Interpreter.cpp.temp
tests/: CMakeLists.txt  arithmetic.cpp  array.cpp  branching.cpp  call.cpp  intrinsic.cpp  square.cpp  square_eq.cpp  string.cpp  test1.cpp  test_common.h  tests.cpp
vm/: CMakeLists.txt  main.cpp
